--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="./src/images/favicon.png"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="./src/styles/wave-style.css">
     <title>SurfEnergy</title>
   </head>
   <body>
@@ -35,6 +36,7 @@
             </p>
           </div>
         </div>
+        <img class="top-wave" src="./src/images/wave.svg" alt="wave-top">
       </header>
       <section class="participants" id="participantes">
         <div class="content-box">
@@ -129,6 +131,7 @@
         </div>
       </section>
       <footer class="footer bg-config-default-fixed">
+        <img class="botton-wave" src="./src/images/wave-2.svg" alt="wave-botton">
         <div class="content-box">
           <div class="footer-content">
             <div class="title-2">
